--- a/apps/website/content/saas-js/docs/starter-kits/nextjs/authentication/customize-auth-screens.mdx
+++ b/apps/website/content/saas-js/docs/starter-kits/nextjs/authentication/customize-auth-screens.mdx
@@ -5,7 +5,7 @@ description: How to customize the built-in authentication screens
 
 ## Configure your auth screens
 
-The auth screen configuration can be changed in `apps/web/config/auth.config.ts`
+All auth screens are located in the `apps/web/features/auth` folder.
 
 ### Authentication type
 
