--- a/apps/website/content/saas-js/docs/starter-kits/nextjs/commands.mdx
+++ b/apps/website/content/saas-js/docs/starter-kits/nextjs/commands.mdx
@@ -1,22 +1,26 @@
 ---
 title: CLI commands
-description: A list of useful commands for working with the Saas UI Next.js starter kit.
+description:
+  A list of useful commands for working with the Saas UI Next.js starter kit.
 ---
 
-Here is a list of useful commands for working with the Saas UI Next.js starter kit.
+Here is a list of useful commands for working with the Saas UI Next.js starter
+kit.
 
 | Command                | Description                                      |
 | ---------------------- | ------------------------------------------------ |
-| `yarn init:env`        | Initialize the environment variables             |
-| `yarn dev:web`         | Start the development server                     |
-| `yarn storybook`       | Start the Storybook server                       |
-| `yarn build:web`       | Build the production app                         |
-| `yarn build:storybook` | Build the Storybook for production               |
-| `yarn build:tokens`    | Build the design tokens for autocompletion       |
-| `yarn db:push`         | Push the database schema to the database         |
-| `yarn db:generate`     | Generate database migrations                     |
-| `yarn db:migrate`      | Run database migrations                          |
-| `yarn billing:sync`    | Sync the billing configuration into the database |
+| `pnpm init:env`        | Initialize the environment variables             |
+| `pnpm dev:web`         | Start the development server                     |
+| `pnpm storybook`       | Start the Storybook server                       |
+| `pnpm build:web`       | Build the production app                         |
+| `pnpm build:storybook` | Build the Storybook for production               |
+| `pnpm build:tokens`    | Build the design tokens for autocompletion       |
+| `pnpm db:push`         | Push the database schema to the database         |
+| `pnpm db:generate`     | Generate database migrations                     |
+| `pnpm db:migrate`      | Run database migrations                          |
+| `pnpm db:seed`         | Seed the database with test data                 |
+| `pnpm db:studio`       | Open the database studio                         |
+| `pnpm billing:sync`    | Sync the billing configuration into the database |
 | `clean:packages`       | Clean build artifacts in all packages            |
 | `format:check`         | Check code formatting                            |
 | `format:write`         | Write code formatting                            |
