--- a/apps/website/content/saas-js/docs/starter-kits/nextjs/installation/clone-repository.mdx
+++ b/apps/website/content/saas-js/docs/starter-kits/nextjs/installation/clone-repository.mdx
@@ -3,17 +3,19 @@ title: Clone the Git repository
 description: Learn how to clone the Saas UI Git repository.
 ---
 
-In case you have redeemed your license key and accepted the Github invite, you should now have access to the Saas UI Pro Git repository.
+In case you have redeemed your license key and accepted the Github invite, you
+should now have access to the Saas UI Pro Git repository.
 
 ## Clone the repository
 
 To clone the repository on your local machine, use the following command:
 
 ```bash
-git clone --single-branch --branch=main git@github.com:saas-js/saas-ui-pro-nextjs-starter-kit.git my-project
+git clone --single-branch --branch=v3 git@github.com:saas-js/saas-ui-pro-nextjs-starter-kit.git my-project
 ```
 
-This will clone the repository into the `my-project` folder, without the commit history.
+This will clone the repository into the `my-project` folder, without the commit
+history.
 
 ## Setup Git
 
@@ -25,39 +27,35 @@ Rename the `saas-ui-pro-nextjs-starter-kit` repository to `upstream`.
 git remote rename origin upstream
 ```
 
-The `saas-ui-pro-nextjs-starter-kit` repository is configured as the `upstream` by default.
-To add your own repository as the `origin`, use the following command:
+The `saas-ui-pro-nextjs-starter-kit` repository is configured as the `upstream`
+by default. To add your own repository as the `origin`, use the following
+command:
 
 ```bash
 git remote add origin git@github.com:your-username/your-repository.git
 ```
 
-You can pull the latest changes from the `upstream` repository using the following command:
+You can pull the latest changes from the `upstream` repository using the
+following command:
 
 ```bash
 git pull upstream main --allow-unrelated-histories
 ```
 
-As your codebase diverges from `saas-ui-pro-nextjs-starter-kit` you will run into merge conflicts eventually,
-so at some point it might be easier to manually copy over any changes that you want to implement.
+As your codebase diverges from `saas-ui-pro-nextjs-starter-kit` you will run
+into merge conflicts eventually, so at some point it might be easier to manually
+copy over any changes that you want to implement.
 
 ## Install dependencies
 
-This project uses `yarn 4` to manage dependencies, you can install all dependencies using the following command:
+This project uses `pnpm` to manage dependencies, you can install all
+dependencies using the following command:
+
+<Info>
+  If you don't have `pnpm` installed, follow the [pnpm installation
+  guide](https://pnpm.io/installation).
+</Info>
 
 ```bash
-yarn
-```
-
-Yarn is shipped with the repository, so you don't need to install it globally.
-If you run into installation issues, you can try to install the latest version of Yarn using the following command:
-
-```bash
-yarn set version latest
-```
-
-In case this doesn't work, enable corepack and run `yarn` again.
-
-```bash
-corepack enable
+pnpm
 ```
