--- a/apps/website/content/saas-js/docs/starter-kits/nextjs/tech-stack.mdx
+++ b/apps/website/content/saas-js/docs/starter-kits/nextjs/tech-stack.mdx
@@ -1,16 +1,23 @@
 ---
 title: Tech stack
-description: An overview of technologies used in the Saas UI Next.js starter kit.
+description:
+  An overview of technologies used in the Saas UI Next.js starter kit.
 ---
 
-The Saas UI Next.js starter kit is built in a monorepo managed by [Yarn](https://yarnpkg.com) and [Turborepo](https://turbo.build/repo).
+The Saas UI Next.js starter kit is built in a monorepo managed by
+[Yarn](https://yarnpkg.com) and [Turborepo](https://turbo.build/repo).
 
 ## Frameworks
 
-- **Next.js**: Using [App Router](https://nextjs.org/docs/app) and [Turbo pack](https://turbo.build/pack).
-- **Postgres**: Managed by [Drizzle](https://orm.drizzle.team), supports self-hosted Postgres or managed services like [Supabase](https://supabase.com) or [Neon](https://neon.tech).
-- **Chakra UI**: UI library for building accessible and responsive web applications.
-- **tRPC**: A powerful and flexible API layer built on top of [tRPC](https://trpc.io).
+- **Next.js**: Using [App Router](https://nextjs.org/docs/app) and
+  [Turbo pack](https://turbo.build/pack).
+- **Postgres**: Managed by [Drizzle](https://orm.drizzle.team), supports
+  self-hosted Postgres or managed services like [Supabase](https://supabase.com)
+  or [Neon](https://neon.tech).
+- **Chakra UI**: UI library for building accessible and responsive web
+  applications.
+- **tRPC**: A powerful and flexible API layer built on top of
+  [tRPC](https://trpc.io).
 - **Zod**: TypeScript-first schema declaration and validation library.
 
 ## Integrations
@@ -21,16 +28,12 @@ The starter kit includes these integrations by default:
 - **Stripe**: Payments and subscriptions.
 - **Resend**: Email delivery.
 
-Other integrations:
-
-- **Supabase**: Authentication.
-- **Lemonsqueezy**: Payments and subscriptions. _Coming soon_
-
 ## Development tools
 
-- **TypeScript**: All code is type-safe to increase productivity and prevent errors.
+- **TypeScript**: All code is type-safe to increase productivity and prevent
+  errors.
 - **ESLint**: Sensible linting rules to help enforce best practices.
 - **Prettier**: Opinionated code formatting for consistency.
 - **Husky**: Run code formatting and linters on Git commits.
-- **Yarn**: Fast, reliable, and secure dependency management.
+- **Pnpm**: Fast, disk space efficient package manager.
 - **Turborepo**: Monorepo management tool.
