--- a/apps/website/content/saas-js/docs/starter-kits/tanstack-start/theming/configuration.mdx
+++ b/apps/website/content/saas-js/docs/starter-kits/tanstack-start/theming/configuration.mdx
@@ -5,74 +5,62 @@ description: How to configure and customize your theme.
 
 ## Configure your theme
 
-You can find you base theme in `packages/theme`, this is where you can customize
-your theme.
+You can find you base theme in `apps/web/theme/preset.ts`, this is where you can
+customize your theme.
 
 Read more about theme customization on the
-[Chakra UI website](https://chakra-ui.com/docs/styled-system/customize-theme).
+[Saas UI website](https://beta.saas-ui.dev/docs/theming/overview).
 
 ```tsx
-import { theme as baseTheme } from /* withThemeColors */ '@saas-ui-pro/react'
-import { extendTheme } from '@saas-ui/react'
+import { defaultConfig } from '@saas-ui-pro/react'
+import { createSystem, defineConfig, defineRecipe } from '@saas-ui/react'
 
-// import { theme as glassTheme } from '@saas-ui-pro/theme-glass'
-import { components } from './components'
-import semanticTokens from './foundations/semantic-tokens'
+import { colors } from './semantic-tokens/colors'
 
-// import colorScheme from './color-schemes/galaxy'
-// import colorScheme from './color-schemes/earth'
-
-export const theme = extendTheme(
-  {
-    semanticTokens,
-    components,
+const buttonRecipe = defineRecipe({
+  variants: {
+    variant: {
+      primary:
+        defaultConfig.theme?.recipes?.button?.variants?.variant?.glass ?? {},
+      secondary:
+        defaultConfig.theme?.recipes?.button?.variants?.variant?.surface ?? {},
+      tertiary:
+        defaultConfig.theme?.recipes?.button?.variants?.variant?.ghost ?? {},
+    },
   },
-  /**
-   * Uncomment this to use any of the built-in color schemes.
-   */
-  // withThemeColors(colorScheme),
-  // glassTheme,
-  baseTheme,
-)
+  defaultVariants: {
+    variant: 'secondary',
+  },
+})
+
+const config = defineConfig({
+  theme: {
+    recipes: {
+      button: buttonRecipe,
+    },
+    slotRecipes: {
+      suiPage: {
+        slots: ['root'],
+        variants: {
+          variant: {
+            panel: {
+              root: {
+                bg: 'bg.content',
+              },
+            },
+          },
+        },
+      },
+    },
+    semanticTokens: {
+      colors,
+    },
+  },
+})
+
+export const system = createSystem(defaultConfig, config)
 ```
 
 The theme extends the Saas UI Pro default theme and includes a set of
-[semantic tokens](https://chakra-ui.com/docs/styled-system/semantic-tokens) and
+[semantic tokens](https://beta.saas-ui.dev/docs/theming/semantic-tokens) and
 custom component styles.
-
-## Glass theme
-
-To use the glass theme, replace the `baseTheme` with `glassTheme`.
-
-```tsx
-export const theme = extendTheme(
-  {
-    semanticTokens,
-    components,
-  },
-  glassTheme,
-)
-```
-
-## Color schemes
-
-The project ships with a number of color schemes that you can use out of the
-box. Color schemes are different from themes, they only change the color palette
-of the theme.
-
-To use a color scheme, import it and pass it to the `withThemeColors` function.
-
-```tsx
-import { theme as baseTheme, withColorScheme } from '@saas-ui-pro/react'
-
-import colorScheme from './color-schemes/galaxy'
-
-export const theme = extendTheme(
-  {
-    semanticTokens,
-    components,
-  },
-  withColorScheme(colorScheme),
-  baseTheme,
-)
-```
