chore: update homepage

--- a/apps/website/content/changelog/playwright-mcp.mdx
+++ b/apps/website/content/changelog/playwright-mcp.mdx
@@ -8,9 +8,9 @@ description:
   Playwright MCP.
 ---
 
-We're excited to announce Playwright integration for both TanStack Start and
-Next.js starter kits! This release brings comprehensive end-to-end testing
-capabilities and groundbreaking AI-powered visual testing through Playwright
+Both TanStack Start and Next.js starter kits now come with a fully configured
+Playwright testing setup out of the box. This release brings comprehensive
+end-to-end testing capabilities and AI-powered visual testing through Playwright
 MCP.
 
 ## What's new?
